subview visibility fixes
Conflicts:
	web/extensions/subview.js
	web/powergrid.css

--- a/web/powergrid.css
+++ b/web/powergrid.css
@@ -668,3 +668,11 @@ ul.pg-menu > li:hover {
     border-color: transparent;
 }
 
+
+.pg-subview-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+}
